test_suite/ERROR_incompatible_types.out
A.test: 0
A.test2: 8
A.test3: 16
ERROR_incompatible_types.java: 10:  Semantic Error: Incompatible types: `B` can't be converted to `C`
ERROR_incompatible_types.java: 18:  Semantic Error: No matching method with id: `test2`
