test_suite/ERROR_incompatible_types.java
// -unused
class Main {
    public static void main(String[] a) {
    }
}

class A {
    public int test() {
        B b;
        C c;
        c = b;
        return 1;
    }
}

class B {
    
}

class C extends B {
    
}
